# gestalt

./: Cargo.toml  Cargo.toml.recove
examples/drivers/: gpio.rs  uart.rs
src/: desc.rs  lib.rs  main.rs
src/core/: Cargo.toml
src/core/src/: interrupt_desc.rs  interrupt_manager.rs  lib.rs  sheduler.rs
src/miscellaneous/: Cargo.toml  misc.rs
src/miscellaneous/src/: lib.rs
src/miscellaneous/src/sleep/: sleep.rs
src/miscellaneous/src/time/: mod.rs  time.rs  time_h.rs
src/socs/gestalt_reference/v1/: Cargo.toml
src/socs/gestalt_reference/v1/src/: gpio.rs  interface.rs  interrupt_handler.rs  lib.rs  uart.rs
src/socs/nordic/nrf52/: Cargo.toml
src/socs/nordic/nrf52/src/: lib.rs
src/socs/nordic/nrf52/src/gpio/: gpio.rs  gpio_none_gestalt.rs  mod.rs
src/socs/nordic/nrf52/src/uart/: uart.rs
src/socs/nordic/nrf52832/drivers/: Cargo.toml
src/socs/nordic/nrf52832/drivers/gpio/: mod.rs
src/socs/nordic/nrf52832/drivers/src/gpio/: gpio.rs
src/socs/nordic/nrf52832/peripheral_access/: Cargo.toml
src/socs/nordic/nrf52832/peripheral_access/src/: lib.rs
src/socs/nordic/nrf52832/peripheral_access/src/radio/: txpower.rs
src/socs/nordic/nrf52840/: desc.rs
src/socs/nordic/nrf52840/drivers/: Cargo.toml
src/socs/nordic/nrf52840/drivers/src/gpio/: gpio.rs
src/socs/nordic/nrf52840/drivers/src/uart/: uart.rs
src/socs/nordic/nrf52840/peripheral_access/: Cargo.toml
src/socs/nordic/nrf52840/peripheral_access/src/: lib.rs  p0.rs  uarte0.rs
