[package]
authors = ["tiny"]
edition = "2018"
readme = "README.md"
name = "gestalt"
version = "0.1.0"

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"


[workspace]
exclude = ["./src/socs/gestalt_reference/v1"]

[dependencies.nrf52832]
path= "src/socs/nordic/nrf52832/peripheral_access"

[dependencies.nrf52840_peripheral_access]
path= "src/socs/nordic/nrf52840/peripheral_access"

[dependencies.nrf52840_drivers]
path= "src/socs/nordic/nrf52840/drivers"

[dependencies.miscellaneous]
path= "src/miscellaneous"

[dependencies.gestalt_reference]
path= "src/socs/gestalt_reference/v1"

[[example]]
name = "gpio"
path = "examples/drivers/gpio.rs"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "gestalt"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
rt = ["cortex-m-rt/device"]

